syntax = "proto3";
package wavstreamer;

message WavData {
    bytes wav_chunk = 1;
}

message EmptyRequest {}

service WavStreamer{
    rpc WavStreamer(EmptyRequest) returns (stream WavData);
}